name:                AdventOfCode2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AdventOfCode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Cycon
maintainer:          luke@lukecycon.com
copyright:           2018 Luke Cycon
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     AOC.Reader
  build-depends:       base >= 4.7 && < 5
                     , text

executable d1
  hs-source-dirs:      exec
  main-is:             Day1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , AdventOfCode2018
                     , text
                     , containers

executable d2
  hs-source-dirs:      exec
  main-is:             Day2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , AdventOfCode2018
                     , text
                     , unordered-containers

executable d3
  hs-source-dirs:      exec
  main-is:             Day3.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:       base >= 4.7 && < 5
                     , AdventOfCode2018
                     , text
                     , unordered-containers
                     , attoparsec